--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,29 +7,21 @@ variables:
   GO_BUILD_COMMAND: "make alm_build"
 
   # Disable unit tests because they require a ./pkg/... structure
-  DISABLE_GO_UNIT_TESTS: "true"
+  #DISABLE_GO_UNIT_TESTS: "true"
 
   # Disabling SonarQube code quality checks. Saves ~10s but should not
   # usually be disabled
   #DISABLE_SONAR: "true"
 
   # Suggested by https://confluence.gec.io/display/SOFT/ALM+Build+Usage+Guide
-  DISABLE_HELM_INTEGRATION_TEST_JOB: "true"
+  #DISABLE_HELM_INTEGRATION_TEST_JOB: "true"
 
   # Force version bumps for changes on default branch instead of just bumping
   # on non-default branches
   FORCE_MASTER_VERSION_BUMPS: "true"
 
   # Set the default git branch (default: "master")
-  # MAIN_BRANCH: "main"
-
-  # Use docker instead of default "podman". Adds ~10s build time because a
-  # docker daemon is started
-  #DOCKER_BUILD_TOOL: "docker"
-
-  # Suggested to be faster than default "vfs" on https://confluence.gec.io/pages/viewpage.action?pageId=113479785
-  # Currently irrelevant for our purpose
-  #STORAGE_DRIVER: "overlay"
+  MAIN_BRANCH: "main"
 
   # Disable irrelevant build logic
   DISABLE_MAVEN_DEPLOY: "true"
