--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,8 @@ variables:
 
 include:
   project: alm/common-infrastructure/gitlab-ci-templates
-  # use custom branch of alm due to https://git.mgmt.innovo-cloud.de/alm/common-infrastructure/gitlab-ci-templates/-/commit/63fd5c65b71f2e91cf310a9aaf5a7178114db828. Should usually be set to "master"
-  ref: 'develop'
+  # use custom branch of alm due to https://git.mgmt.innovo-cloud.de/alm/common-infrastructure/gitlab-ci-templates/-/commit/63fd5c65b71f2e91cf310a9aaf5a7178114db828. Should usually be set to "master" (default)
+  #ref: 'develop'
   file: '.go-docker-helm.yml'
 
 # Analyze package-and-publish phase (can be applied to any phase)
